<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alle ins Gold</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Wettkampf</string>
    <string name="title_section3">Statistik</string>
    <string name="title_activity_shooter_results_table">ShooterResultsTableActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="shooter_name">Shooter Name</string>
    <string name="shooter_info">Informationen über den Schützen</string>
    <string name="distance">Distanz</string>
    <string name="numer_of_rounds">Anzahl der Runden: </string>
    <string name="round_number">Runde %d</string>
    <string name="arrows">Pfeile</string>
    <string name="arrow_1">1</string>
    <string name="arrow_2">2</string>
    <string name="arrow_3">3</string>
    <string name="passe_sum">Summe</string>
    <string name="passe_carry">Übertrag</string>
    <string name="shooter_total">Gesamtsumme</string>
    <string name="placeholder0">0</string>
    <string name="placeholder1">1</string>
    <string name="placeholder_dist">30m</string>
    <string name="btn_test_shootResultsTable">Schießzettel testen</string>
    <string name="title_activity_competition_details">CompetitionDetailsActivity</string>

</resources>
